--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
 
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/barba.js/dist/barba.min.js" type="text/javascript"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded" , function(){
-            console.log("I loaded in browser");
-            Barba.Pjax.start();
-        });
-    </script>
+    <script src="./index.js"></script>
 </body>
 </html>
