--- a/page2.html
+++ b/page2.html
@@ -19,5 +19,6 @@
 
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/barba.js/dist/barba.min.js" type="text/javascript"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
