--- a/page3.html
+++ b/page3.html
@@ -19,6 +19,7 @@
 
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/barba.js/dist/barba.min.js" type="text/javascript"></script>
+    <script src="./index.js"></script>
 
 </body>
 </html>
